--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 /* Home Menu */
 .home-menu {
-    display: grid;
+    display: none;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     height: 100vh;
